# meson

mesonbuild/: coredata.py  mesonmain.py
mesonbuild/modules/: gnome.py
test cases/frameworks/7 gnome/: installed_files.txt  meson.build
test cases/frameworks/7 gnome/gir/: meson.build
test cases/frameworks/7 gnome/vapi/: meson.build  vapi-test.vala
